--- a/Causality/Causality.vcxproj
+++ b/Causality/Causality.vcxproj
@@ -404,6 +404,9 @@
       <Project>{4afcff85-5953-4b9d-b8f6-6a1711597081}</Project>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Natvis Include="..\OpenAvataring\dlib.natvis" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets" />
 </Project>
